# URL-Shortening-Service

./: Cargo.toml  README.md  url_mappings.db
src/: errors.rs  main.rs
