[package]
name = "url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "uuid", "chrono"]}
thiserror = "2.0.16"
url = "2.5.7"